test/ing-name-based-virtual-hosting.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: name-based-virtual-hosting
  annotations:
    kubernetes.io/ingress.class: azure-application-gateway
spec:
  rules:
  - host: nbvh-foo.test
    http:
      paths:
      - backend:
          serviceName: nginx-foo
          servicePort: 80
  - host: nbvh-bar.test
    http:
      paths:
      - backend:
          serviceName: nginx-bar
          servicePort: 80
