test/ing-simple-fanout-with-404.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-fanout-with-404
spec:
  rules:
  - host: fanout.test
    http:
      paths:
      - path: /foo/*
        backend:
          serviceName: nginx-foo
          servicePort: 80
      - path: /bar/*
        backend:
          serviceName: nginx-bar
          servicePort: 80
  backend:
    serviceName: nginx
    servicePort: 80
