test/ing-simple-fanout.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-fanout
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: fanout.test
    http:
      paths:
      - path: /foo
        backend:
          serviceName: nginx-foo
          servicePort: 80
      - path: /bar
        backend:
          serviceName: nginx-bar
          servicePort: 80
