test/ing-single-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: single-service
spec:
  backend:
    serviceName: nginx
    servicePort: 80
